Remove stray </div> Add data dumper button

--- a/web/templates/trait_list.tmpl
+++ b/web/templates/trait_list.tmpl
@@ -47,6 +47,8 @@
             <TMPL_LOOP NAME=RESULT>
                 <TMPL_INCLUDE NAME="trait_box.tmpl">
             </TMPL_LOOP>
-          </div>
         </div>
+    </div>
+    <div class="container">
+        <TMPL_INCLUDE NAME="download_data.tmpl">
 <TMPL_INCLUDE NAME="includes/footer.tmpl">
