correct db field name Move trait list download my data button

--- a/web/templates/trait_list.tmpl
+++ b/web/templates/trait_list.tmpl
@@ -29,10 +29,12 @@
             <div class="span4 pull-left">
                 <h1><i class="icon-th-list trait-header-icon"></i> Traits</h1>
             </div>
+            <div class="span3 pull-right">
+                <TMPL_INCLUDE NAME="download_data.tmpl">
+            </div>
             <div class="span4 pull-right">
                 <div class="btn-group pull-right">
-                    <TMPL_INCLUDE NAME="download_data.tmpl">
-					<button id="openButton" class="btn">
+		    <button id="openButton" class="btn">
                         <i class="icon-folder-open"></i> Open All
                     </button>
                     <button id="closeButton" class="btn btn-inverse">
