QC_FLAG functionality and Db.pm cleanup

--- a/web/templates/includes/header.tmpl
+++ b/web/templates/includes/header.tmpl
@@ -6,3 +6,6 @@
             <p class="navbar-text pull-right padded-nav-text"></p>
         </div>
     </div>
+    <TMPL_IF NAME=QC_FLAG>
+        <div class="qc">QCFLAG</div>
+    </TMPL_IF>
