--- a/web/templates/includes/result_header.tmpl
+++ b/web/templates/includes/result_header.tmpl
@@ -23,6 +23,9 @@
             <p class="navbar-text pull-right padded-nav-text"></p>
         </div>
     </div>
+    <TMPL_IF NAME=QC_FLAG>
+        <div class="qc">QCFLAG</div>
+    </TMPL_IF>
     <div id="mainContainer-header" class="container">                          
         <div class="row">                                                      
             <div class="span4 pull-left">                                      
