--- a/web/templates/includes/header.tmpl
+++ b/web/templates/includes/header.tmpl
@@ -1,11 +1,4 @@
 <TMPL_INCLUDE NAME="all_header.tmpl">
 </head>
 <body>
-    <div class="navbar navbar-fixed-top">
-        <div class="navbar-inner">
-            <p class="navbar-text pull-right padded-nav-text"></p>
-        </div>
-    </div>
-    <TMPL_IF NAME=QC_FLAG>
-        <div class="qc">QCFLAG</div>
-    </TMPL_IF>
+<TMPL_INCLUDE NAME="navbar.tmpl">
