--- a/web/templates/includes/result_header.tmpl
+++ b/web/templates/includes/result_header.tmpl
@@ -18,14 +18,7 @@
     </script>  
 </head>
 <body>
-    <div class="navbar navbar-fixed-top">
-        <div class="navbar-inner">
-            <p class="navbar-text pull-right padded-nav-text"></p>
-        </div>
-    </div>
-    <TMPL_IF NAME=QC_FLAG>
-        <div class="qc">QCFLAG</div>
-    </TMPL_IF>
+<TMPL_INCLUDE NAME="navbar.tmpl">
     <div id="mainContainer-header" class="container">                          
         <div class="row">                                                      
             <div class="span4 pull-left">                                      
