Add copy text for navbar qc warning

--- a/web/templates/includes/navbar.tmpl
+++ b/web/templates/includes/navbar.tmpl
@@ -4,6 +4,6 @@
         </div>
     </div>
     <TMPL_IF NAME=QC_FLAG>
-        <div class="warning">QCFLAG</div>
+        <div class="warning">Note: Your DNA sample produced low quality data.  Please interpret your results with caution, as we cannot be certain of their accuracy.</div>
     </TMPL_IF>
 
