second attempt at footer

--- a/web/templates/includes/footer.tmpl
+++ b/web/templates/includes/footer.tmpl
@@ -1,6 +1,6 @@
 </div>
-<div>
-	<i>Remember these are scientific research results and shouldn't be treated as medical information. If you have any health concerns please speak to a doctor.</i>
+<div class="well">
+	<small><i>Remember these are scientific research results and shouldn't be treated as medical information. If you have any health concerns please speak to a doctor.</i></small>
 </div>
 </body>
 </html>
