took out meaningless "confidence" metric not tested!

--- a/web/templates/trait_box.tmpl
+++ b/web/templates/trait_box.tmpl
@@ -32,10 +32,10 @@
                                     <i class="icon-star-empty"></i>
                                 </TMPL_IF>
                             </div>
-                            <div class="span3">
+                            <!-- <div class="span3">
                                 <b>Confidence</b><br />
                                 <TMPL_VAR NAME=TRAIT_CONF>%
-                            </div>
+                            </div> -->
                            <div class="span4">
                                 <b>Result</b><br />
                                 <TMPL_UNLESS NAME=MULTI_SNP>
