--- a/web/templates/results/QT2.tmpl
+++ b/web/templates/results/QT2.tmpl
@@ -8,6 +8,7 @@
                     <TMPL_VAR NAME=TRAIT_DESCRIPTION></p>
                 </div>
             </div>
+						<div id="populationBar" class="populationBar"><span id="populationBarValue" value="<TMPL_VAR NAME=PCTILE>" class="populationBarValue"></span></div>
             <TMPL_LOOP NAME=SNPS>
                 <TMPL_INCLUDE NAME="snp_box.tmpl">
             </TMPL_LOOP>
