--- a/web/templates/results/QT2.tmpl
+++ b/web/templates/results/QT2.tmpl
@@ -10,15 +10,44 @@
         </div>
       </div>
       <div class="row-fluid">
-	<div class="span6">
-	  <img src="<TMPL_VAR NAME=POPDIST_URI>" alt="Trait Distribution in Population"/>
+	<div class="span1"></div>
+	<div class="span5">
+	  <div class="row-fluid">
+	    <div class="span12">
+	      <img src="<TMPL_VAR NAME=POPDIST_URI>" alt="Trait Distribution in Population"/>
+	    </div>
+	  </div>
+	  <div class="row-fluid">
+	    <div class="span12 center">
+	      The black curve shows the distribution of this trait in the general UK population. The red curve shows your expected value after incorporating your genetic prediction. You should notice that while IYG predictions can slightly alter your expected values, the change is very small compared to the overall uncertainty!
+	    </div>
+	  </div>
 	</div>
-	<div class="span6 pull-right">
-	  <img src="<TMPL_VAR NAME=IYGHIST_URI>" alt="Trait Distribution in Inside Your Genome"/>
+	<div class="span5">
+	  <div class="row-fluid">
+	    <div class="span12">
+	      <img src="<TMPL_VAR NAME=IYGHIST_URI>" alt="Trait Distribution in Inside Your Genome"/>
+	    </div>
+	  </div>
+	  <div class="row-fluid">
+	    <div class="span12 center">
+	      This histogram is the distribution of risk scores in all the IYG samples. Individuals toward the left have lower than average levels, while individuals on the right have higher. The vertical dashed line shows your position. The percentage bar below shows exactly where you fall in the IYG distribution.
+	    </div>
+	  </div>
+	</div>
+	<div class="span1"></div>
+      </div>
+      <div class="row-fluid">
+	<div class="span1">
+	</div>
+	<div class="span10">
+          <div id="populationBar1" class="populationBar"><span id="populationBarValue1" value="<TMPL_VAR NAME=PCTILE>" class="populationBarValue"></span></div>
+	  &nbsp;<br/>
+	</div>
+	<div class="span1">
 	</div>
       </div>
     </div>
-    <div id="populationBar" class="populationBar"><span id="populationBarValue" value="<TMPL_VAR NAME=PCTILE>" class="populationBarValue"></span></div>
     <TMPL_LOOP NAME=SNPS>
       <TMPL_INCLUDE NAME="snp_box.tmpl">
     </TMPL_LOOP>
