--- a/web/templates/includes/all_header.tmpl
+++ b/web/templates/includes/all_header.tmpl
@@ -8,6 +8,8 @@
   <script src="/resource/jquery-ui_1.8.7/jquery-ui.min.js" type="text/javascript"></script>
   <script src="/resource/bootstrap/js/bootstrap.js" type="text/javascript"></script>
   <link href="/resource/jquery-ui_1.8.7/jquery-ui.css" rel="stylesheet" type="text/css">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link href="/resource/bootstrap/css/bootstrap-responsive.css" rel="stylesheet">
 
   <script>
     $(document).ready(function(){
