Added label to tree

--- a/web/templates/results/Tree.tmpl
+++ b/web/templates/results/Tree.tmpl
@@ -20,7 +20,7 @@
 	  <TMPL_IF NAME=TREE_DESC>
 	  <div class="row-fluid">
 	    <div class="span12 center">
-	      <TMPL_VAR NAME=TREE_DESC>
+	      <b>Haplogroup <TMPL_VAR NAME=TREE_STATE>:</b> <TMPL_VAR NAME=TREE_DESC>
 	    </div>
 	  </div>
 	  </TMPL_IF>
